resources/css/styles.css
body {
  font-family: Helvetica;
  font-size: 16px;
  line-height: 1.5;
  margin: 0;
}

.page-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #800000;
  color: white;
}

.page-header h4 {
  font-size: 1.3em;
  font-family: 'Courier New', Courier, monospace;
}

.page-header ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  list-style: none;
}

.page-header a {
  display: block;
  padding: 0.5em;
  text-decoration: none;
  color: white;
  letter-spacing: 2px;
  font-size: 1em;
  font-family: 'Courier New', Courier, monospace;
}

